@@ -1,6 +1,3 @@
 Warning: model inconsistency detected
   test_div5.mzn:7:
   in binary '!=' operator expression
-Warning: model inconsistency detected
-  test_div5.mzn:7:
-  in binary '!=' operator expression
